actually delete darkcubesystem